Make BadCollector resumable(-ready) ()
Make BadCollector resumable(-ready)

* Split out resume tests
* Give jsonOutputProblemHandler a StoreChannel
* Add checkpoint and resumeFromCheckpoint to BadCollector
* Overwrite the previous import context dir on resume

Note that we don't call checkpoint/resumeFromCheckpoint anywhere yet.
This is because `--resume` currently overrides the store anyway. We will
have to introduce that once we have some actual checkpoint/resume logic.

---------

Co-authored-by: Claude Opus 5 (1M context) <noreply@anthropic.com>